# viv-prj-gen

./: .gitignore  CMakeLists.txt  README.adoc  README.md  Tutorial.adoc  functions.cmake  meson.build  mit_license.txt  util_functions.cmake  vivgen_functions.cmake
cmake_utils/: helper_functions.cmake  util_functions.cmake
cmake_utils/tests/: CMakeLists.txt
constraints/: meson.build
constraints/unscopedlate/: meson.build  uart_rx.xdc
demos/bd_test/: CMakeLists.txt
demos/bd_test_xci/: CMakeLists.txt
demos/blinky/: CMakeLists.txt  build.py  sim.py
demos/corundum/: .gitignore  CMakeLists.txt  run.sh
demos/cpyxci_test/: CMakeLists.txt
demos/internal/: CMakeLists.txt
demos/seldridge-verilog/: .gitignore  CMakeLists.txt  run.sh
demos/simple/: CMakeLists.txt
demos/vhdl-extras/: .gitignore  CMakeLists.txt  run.sh
docs/: file_functions.adoc  tutorial.adoc  util_functions.adoc  vivgen_functions.adoc  vivgen_functions.html
hdl/: GenericDFlipFlop.vhdl  demo_top.vhdl  meson.build
pythonscripts/: gensubdir_mesonbuild.py  meson.build
tcl/: buildnonprj.tcl  cmdline_dict_procs.tcl  cmdline_dict_utils.tcl  cpy_xci.tcl  gen_bdhdf.tcl  gen_bdprj.tcl  gen_ip.tcl  gen_prj.tcl  gen_xactip.tcl  gen_xci.tcl  genbdhdf.tcl  gensimprj.tcl  genxci.tcl  meson.build  route.tcl  synth.tcl  viv_prj_procs.tcl  writebit.tcl
tcl/default_scripts/: gen_bdhdf.tcl  nonprj_place.tcl  nonprj_route.tcl  nonprj_synth.tcl  nonprj_writebit.tcl
tcl/helper_procs/: cmdline_dict.tcl  vivprj.tcl
tests/: CMakeLists.txt  test_addfiles.tcl  test_cmdlinedict.tcl
tutorial/: Tutorial.adoc
(+67 files in other folders)
